efs-test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: efs-test-pod
spec:
  containers:
  - name: app
    image: nginx
    volumeMounts:
    - name: efs-vol
      mountPath: /usr/share/nginx/html
  volumes:
  - name: efs-vol
    persistentVolumeClaim:
      claimName: efs-test-pvc
