fix.yaml
apiVersion: v1
kind: Pod
metadata:
  name: volume-fix
spec:
  containers:
  - name: fixer
    image: busybox
    command: ["sleep", "3600"]
    volumeMounts:
    - mountPath: /data
      name: storage
  volumes:
  - name: storage
    persistentVolumeClaim:
      claimName: my-pvc
