host-vol-jenkins.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hostpath-example
spec:
  containers:
  - name: jenkins
    image: jenkins/jenkins:lts
    volumeMounts: 
      - mountPath: "/var/jenkins_home"  
        name: host-volume
  volumes:
  - name: host-volume
    hostPath:
      path: /var/jenkins_home
      type: DirectoryOrCreate
