gateway-grafana-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grafana
  namespace: default
spec:
  gateways:
  - istio-system/grafana-gateway
  hosts:
  - "*"
  http:
  - match:
    - uri:
        prefix: /grafana
    route:
    - destination:
        host: grafana-cluster
        port:
          number: 3000
